update form in index.html

--- a/comics_client/index.html
+++ b/comics_client/index.html
@@ -5,10 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
      <link rel="stylesheet" href="./style.css">
     <title>Comics API</title>
+    <script type="text/javascript" src="./src/index.js"></script>
   </head>
   <body>
+    <h1>Comics</h1>
+    <main></main>
+    <br>
+
     <div id="main-content">
-      <h1>Comic Reviews</h1>
+      <h2>Comic Reviews</h2>
 
       <!-- <form id="create-review-form" action="http://localhost:3000/reviews" method="post"> -->
         <form id="create-review-form" action="#" method="post">
@@ -24,9 +29,12 @@
         </ul>
       </div>
 
-    <script src="./src/index.js"></script>
-    <!-- <script src="./src/index.js"></script> -->
-  </div>
+      <!-- <script src="./src/index.js"></script> -->
+      <!-- <script src="./src/index.js"></script> -->
+    </div>
+
+
+    
   </body>
 </html>
 
