Define routes in routes.rb and create actions in ComicsController

--- a/comics_client/index.html
+++ b/comics_client/index.html
@@ -15,10 +15,10 @@
     <div id="main-content">
       <h2>Comic Reviews</h2>
 
-      <!-- <form id="create-review-form" action="http://localhost:3000/reviews" method="post"> -->
+      <!-- <form id="create-review-form" action="http://localhost:3000/reviews" method="POST"> -->
         <form id="create-review-form" action="#" method="post">
-        <label for="new-review-description">Review:</label>
-        <input type="text" id="new-review-description" name="new-review-description" placeholder="description">
+        <label for="newReviewDescription">Review:</label>
+        <input type="text" id="newReviewDescription" name="newReviewDescription" placeholder="description">
         <br>
         <input type="submit" value="Create New Review">
       </form>
